@@ -149,6 +149,7 @@ Chronological list of authors
   - Marcello Sega
   - Nicholas Craven
   - Ramon Crehuet
+  - Haochuan Chen
 
 External code
 -------------
